Fix img widths on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ header p {
   margin: auto;
 }
 
+.full-width-img {
+  width: 100%;
+}
+
 main a {
   color: #0863f5;
   text-decoration: none;
